--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,7 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+/* sezione media query tablet */
+@media all and (max-width: 768px) and (min-width: 421px) {
+ 
